fix: align button and inputs better

--- a/packages/main/src/themes/ColorPicker.css
+++ b/packages/main/src/themes/ColorPicker.css
@@ -117,7 +117,7 @@
 .ui5-color-picker-current-color {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -171,16 +171,24 @@
     position: relative;
 }
 
-.ui5-color-channel-percentage-label {
-    position: absolute;
-    top: 25%;
-    left: 100%;
-}
-
 .ui5-color-channel-input {
     width: 2.5rem;
     min-width: 2.5rem;
     text-align: center;
+}
+
+.ui5-color-channel-input::part(input) {
+    min-width: initial;
+    padding: 0 0.25rem;
+}
+
+.ui5-color-channel-percentage-label {
+    width: 1rem;
+}
+
+.ui5-color-channel-toggle {
+    min-width: var(--_ui_color_channel_toggle_button_width);
+    margin-inline-start: 0.5rem;
 }
 
 .ui5-color-picker-hue-slider::part(progress-container)::before,
